feat: roles authentication
