# backend/cmd/api/middleware.go
@@ -9,6 +9,7 @@ import (
 	"strings"
 
 	"github.com/golang-jwt/jwt/v5"
+	"github.com/turut4/social/internal/store"
 )
 
 func (app *application) AuthTokenMiddleware(next http.Handler) http.Handler {
@@ -87,4 +88,45 @@ func (app *application) BasicAuthMiddleware() func(http.Handler) http.Handler {
 			next.ServeHTTP(w, r)
 		})
 	}
+}
+
+func (app *application) checkPostOwnership(requiredRole string, next http.HandlerFunc) http.HandlerFunc {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		user := getUserFromContext(r)
+		post := getPostFromContext(r)
+		app.logger.Info("AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA")
+
+		if user.ID != post.UserID {
+			app.unauthorizedErrorResponse(w, r, fmt.Errorf("user do not own this "))
+			return
+		}
+
+		allowed, err := app.checkRolePrecedence(r.Context(), user, requiredRole)
+		app.logger.Info("AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA")
+		if err != nil {
+			app.internalServerError(w, r, err)
+			return
+		}
+
+		if !allowed {
+			app.forbiddenErrorResponse(w, r)
+			return
+		}
+
+		next.ServeHTTP(w, r)
+	})
+}
+
+func (app *application) checkRolePrecedence(ctx context.Context, user *store.User, roleName string) (bool, error) {
+	role, err := app.store.Roles.GetByName(ctx, roleName)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			return false, fmt.Errorf("role don't exists")
+		default:
+			return false, err
+		}
+	}
+
+	return user.Role.Level >= role.Level, nil
 }
